--- a/web/Plantillas/Plantilla.xhtml
+++ b/web/Plantillas/Plantilla.xhtml
@@ -9,6 +9,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/normalize.css"/>
         <h:outputStylesheet name="./css/estilos.css"/>
+        <h:outputStylesheet name="./css/TGU.css"/>
+        
         <title>Facelets Template</title>
     </h:head>
 
@@ -20,7 +22,7 @@
                         <a href="#"></a>
                     </div>
                     <div class="borde-redondo"></div>
-                    <a href="#" class="titulo">Hora Saludable<!--#{bundle.AppName}--></a>
+                    <a href="#" class="titulo">TGU<!--#{bundle.AppName}--></a>
                     <div class="CuadroDeBotonesSesion">                        
                         <ui:insert name="CuadroDeBotonesSesion"> 
                             <h:form>
