--- a/web/Paginas/General/Index.xhtml
+++ b/web/Paginas/General/Index.xhtml
@@ -1,15 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
         <ui:composition template="./../../Plantillas/Plantilla.xhtml">
-
-            <ui:define name="titulo">
-                titulo
-            </ui:define>
 
             <ui:define name="CuadroDeBotonesSesion">
                 CuadroDeBotonesSesion
@@ -20,14 +18,34 @@
             </ui:define>
 
             <ui:define name="title">
-                title
+                <p:breadCrumb>
+                    <p:menuitem value="principal" outcome="Index" />                                                             
+                </p:breadCrumb>
+                <br />
+                <br />
             </ui:define>
 
             <ui:define name="body">
-                body
+                <h:form id="frmListaTrabajosGrado">                    
+                    <p:layout>
+                        <p:layoutUnit position="west">
+                            <p:menu>
+                                <p:submenu label="Rol">
+                                    <p:menuitem value="Director" outcome="indexDirector"/>
+                                    <p:menuitem value="Jefe de Departamento" outcome="vistaJefe"/>
+                                </p:submenu>
+                                <p:submenu></p:submenu>
+                            </p:menu>
+                        </p:layoutUnit>
+
+                        <p:layoutUnit position="center">
+
+                        </p:layoutUnit>
+                    </p:layout>
+                </h:form>
             </ui:define>
 
-        </ui:composition> 
+        </ui:composition>
 
     </body>
 </html>
