--- a/web/Plantillas/Plantilla.xhtml
+++ b/web/Plantillas/Plantilla.xhtml
@@ -20,7 +20,7 @@
                         <a href="#"></a>
                     </div>
                     <div class="borde-redondo"></div>
-                    <a href="#" class="titulo">Hora Saludable<!--#{bundle.AppName}--></a>
+                    <a href="#" class="titulo">TGU<!--#{bundle.AppName}--></a>
                     <div class="CuadroDeBotonesSesion">                        
                         <ui:insert name="CuadroDeBotonesSesion"> 
                             <h:form>
