--- a/web/Paginas/General/fasesTrabajoGrado/index.xhtml
+++ b/web/Paginas/General/fasesTrabajoGrado/index.xhtml
@@ -25,9 +25,7 @@
                     <p:menuitem value="Trabajos de Grado" url="../indexDirector.xhtml" />                        
                     <p:menuitem value="Fases del Trabajo de Grado" outcome="index" />
                     <p:menuitem value="1. Presentación de la Idea" url="" />
-                </p:breadCrumb>
-                <br />
-                <br />
+                </p:breadCrumb>                
             </ui:define>
 
             <ui:define name="body">
@@ -36,37 +34,45 @@
                 </f:metadata>                
                 <h:form>                                       
                     <div class="tituloContenido">                        
-                        #{trabajodegradoController.trabajo.trabajonombre} <br/>
+                        #{trabajodegradoController.trabajo.trabajonombre}
                     </div>                 
-
+                    <h:form>
+                        <p:menu styleClass="menuizqroles">                            
+                            <p:submenu label="Perfiles">
+                                <p:menuitem value="Director" style="background-color:graytext" url="../Director.xhtml" />                                
+                                <p:menuitem value="Jefe de Departamento"/>
+                            </p:submenu>
+                            <p:submenu></p:submenu>                            
+                        </p:menu>
+                    </h:form>
                     <p:panel styleClass="paneltrabajo" >
-                        <h:panelGrid columns="6" cellpadding="5">
+                        <h:panelGrid columns="6" cellpadding="0">
                             <f:facet name="header">
                                 <h:outputText value="Fases del Trabajo de Grado" />
                             </f:facet>
 
-                            <p:graphicImage value="../../../resources/img/1.png"/>
-                            <p:graphicImage value="../../../resources/img/2.png"/>
-                            <p:graphicImage value="../../../resources/img/3.png"/>
-                            <p:graphicImage value="../../../resources/img/4.png"/>
-                            <p:graphicImage value="../../../resources/img/5.png"/>
-                            <p:graphicImage value="../../../resources/img/6.png"/>                        
+                            <p:graphicImage value="../../../resources/img/1.png" style="width: 96px;" />
+                            <p:graphicImage value="../../../resources/img/2.png" style="width: 96px;" />
+                            <p:graphicImage value="../../../resources/img/3.png" style="width: 96px;" />
+                            <p:graphicImage value="../../../resources/img/4.png" style="width: 96px;" />
+                            <p:graphicImage value="../../../resources/img/5.png" style="width: 96px;" />
+                            <p:graphicImage value="../../../resources/img/6.png" style="width: 96px;" />                        
 
-                            <p:commandButton type="button" value="Presentación de la Idea" style="background-color:greenyellow" disabled="#{trabajodegradoController.fases.primeraFase}"  >                            
+                            <p:commandButton type="button" value="Presentación de la Idea" style="background-color:greenyellow; height: 96px;" disabled="#{trabajodegradoController.fases.primeraFase}" >                            
                                 <p:effect type="highlight" event="click" for="pnlPresentacionIdea">
                                     <f:param name="mode" value="'show'" />
                                 </p:effect>
                             </p:commandButton>
 
-                            <p:button value="Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}"/>
+                            <p:button value="Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Evaluación del Anteproyecto" outcome="3-evaluacion-anteproyecto" disabled="#{trabajodegradoController.fases.terceraFase}"/>
+                            <p:button value="Evaluación del Anteproyecto" outcome="3-evaluacion-anteproyecto" disabled="#{trabajodegradoController.fases.terceraFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Ejecución del Proyecto de Grado" outcome="4-ejecucion-proyecto-grado" disabled="#{trabajodegradoController.fases.cuartaFase}"/>
+                            <p:button value="Ejecución del Proyecto de Grado" outcome="4-ejecucion-proyecto-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Evaluación del Trabajo de Grado" outcome="5-evaluacion-trabajo-grado" disabled="#{trabajodegradoController.fases.quintaFase}"/>
+                            <p:button value="Evaluación del Trabajo de Grado" outcome="5-evaluacion-trabajo-grado" disabled="#{trabajodegradoController.fases.quintaFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Finalizado" outcome="6-finalizado" disabled="#{trabajodegradoController.fases.sextaFase}"/>
+                            <p:button value="Finalizado" outcome="6-finalizado" disabled="#{trabajodegradoController.fases.sextaFase}" style="height: 96px;" />
                         </h:panelGrid>        
                         <br />
                         <p:panel id="pnlPresentacionIdea" header="1. Presentación de la Idea" style="display:none" widgetVar="pnlPresentacionIdea">
@@ -75,12 +81,12 @@
                                     <f:param name="mode" value="'show'" />
                                 </p:effect>
                             </p:commandButton>-->
-                            <p:panelGrid columns="3">
-                                <p:button value="Dilegenciar" icon="ui-icon-check" href="../FormatoA.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}">                                                  
+                            <h:panelGrid columns="3">
+                                <p:button value="Dilegenciar" icon="ui-icon-check" href="../FormatoA.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnDiligenciarFormatoA}">                                                  
                                 </p:button>                                                    
-                                <p:commandButton value="Ver" icon="ui-icon-check"></p:commandButton>                        
+                                <p:button value="Ver" icon="ui-icon-check" href="../verFormatoA.xhtml" disabled="#{trabajodegradoController.btnVerFormatoA}" ></p:button>                                                        
                                 <!--<p:commandButton value="Descargar" icon="ui-icon-check"></p:commandButton>-->
-                            </p:panelGrid>
+                            </h:panelGrid>
                         </p:panel>
                     </p:panel>
 
