--- a/web/Plantillas/Plantilla.xhtml
+++ b/web/Plantillas/Plantilla.xhtml
@@ -10,19 +10,19 @@
         <h:outputStylesheet name="./css/normalize.css"/>
         <h:outputStylesheet name="./css/estilos.css"/>
         <h:outputStylesheet name="./css/TGU.css"/>
-        
-        <title>Facelets Template</title>
+
+        <title>SGTG</title>
     </h:head>
 
     <h:body>
-<header id="mainHeader">
+        <header id="mainHeader">
             <div class="contenedor">
                 <div class="top">
                     <div class="logo">
-                        <a href="#"></a>
+                        <a href="http://www.unicauca.edu.co/"></a>
                     </div>
                     <div class="borde-redondo"></div>
-                    <a href="#" class="titulo">TGU<!--#{bundle.AppName}--></a>
+                    <a href="#" class="titulo">#{bundle.AppName}</a>
                     <div class="CuadroDeBotonesSesion">                        
                         <ui:insert name="CuadroDeBotonesSesion"> 
                             <h:form>
