--- a/web/Paginas/General/Director.xhtml
+++ b/web/Paginas/General/Director.xhtml
@@ -15,43 +15,38 @@
             </ui:define>
 
             <ui:define name="menuprincipal">
-
+                <p:breadCrumb styleClass="migaDePan">
+                    <p:menuitem value="Director" url="Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />
+                    <p:menuitem value="Director" url="Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />
+                </p:breadCrumb>
             </ui:define>
 
-            <ui:define name="title">
-                <p:breadCrumb>
-                    <p:menuitem value="Director" url="Director.xhtml?faces-redirect=true" />
-                </p:breadCrumb>
+            <ui:define name="title">                
             </ui:define>
 
             <ui:define name="body">
 
-
-
-                <p:dialog showEffect="fade" hideEffect="explode" position="center" widgetVar="agregartest" header="Agregar Nuevo Trabajo de Grado" modal="true">
-
+                <p:dialog showEffect="fade" hideEffect="explode" position="center" widgetVar="agregartest" header="Crear nuevo Trabajo de Grado" modal="true">
                     <h:form>
                         <h:panelGrid columns="2" cellpadding="10">
                             <p:outputLabel value="Nombre del Trabajo de Grado" />
-                            <p:inputText  id="nombre" value="#{usuarioRolTrabajogradoController.nombrenuevoTG}" label="nombre">
+                            <p:inputTextarea  id="nombre" value="#{usuarioRolTrabajogradoController.nombrenuevoTG}" label="nombre">
                                 <!-- <p:ajax update="btnnuevotg" /> -->
-                            </p:inputText>
+                            </p:inputTextarea>
+                            
                             <f:facet name="footer">
-                                <p:commandButton id="btnnuevotg" actionListener="#{usuarioRolTrabajogradoController.crearTG}" value="Crear" icon="ui-icon-disk" update=":form:tablatg" />              
+                                <p:commandButton id="btnnuevotg" actionListener="#{usuarioRolTrabajogradoController.crearTG}" value="Crear" icon="ui-icon-disk" update=":form:tablatg" onclick="agregartest.hide()"/>              
                             </f:facet>                   
                         </h:panelGrid>
                     </h:form>
                 </p:dialog>
 
                 <h:form id="form">
-                    <p:menu styleClass="menuizqroles">
-                        <p:submenu label="Perfiles">
-                            <p:menuitem value="Director" style="background-color:graytext" action="Director.xhtml?faces-redirect=true"/>
-                            <p:menuitem value="Jefe de Departamento"/>
-                        </p:submenu>
-                        <p:submenu label="...">
-                            <p:menuitem value="Otros Roles..." />
-                        </p:submenu>
+                    <p:menu styleClass="menuizqroles" style="background-color: white">
+                        <p:submenu label="Perfiles" style="background-color: white">
+                            <p:menuitem value="Director" action="Director.xhtml?faces-redirect=true" style="background-color: #c2dfef" />
+                            <p:menuitem value="Jefe de Departamento" action="vistaJefe.xhtml?faces-redirect=true" />
+                        </p:submenu>                                
                     </p:menu>
 
                     <p:panel styleClass="paneltrabajo" >
@@ -72,7 +67,7 @@
 
                                 #{car.fecha}                                  
                             </p:column>
-                            <p:column headerText="Nombre TG">
+                            <p:column headerText="Nombre del Trabajo de Grado">
                                 <p:link outcome="fasesTrabajoGrado/index" value="#{car.trabajoGrado}">                                        
                                     <f:param name="trabajoid" value="#{car.trabajoGradoId}" />                                        
                                 </p:link>                                                                        
@@ -80,13 +75,10 @@
                             <p:column headerText="Estudiantes">
                                 #{car.est1} ,  #{car.est2}      
                             </p:column>
-                            <p:column headerText="Estado">
+                            <p:column headerText="Fase">
                                 #{car.estado}    
                             </p:column>        
-                        </p:dataTable>
-                        <p:commandButton value="Exportar como PDF" ajax="false" >
-                <p:dataExporter type="pdf" target="tablatg" fileName="FormatoA" />
-            </p:commandButton>
+                        </p:dataTable>                        
                     </p:panel>
                 </h:form> 
             </ui:define>
