--- a/web/Paginas/General/editar-Formato-A.xhtml
+++ b/web/Paginas/General/editar-Formato-A.xhtml
@@ -17,21 +17,20 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Director" url="../Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />
-                        <p:menuitem value="Director" url="../Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />
-                        <p:menuitem value="Trabajos de Grado" url="../Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="FormatoA" style="color:#FFFFFF;" />
-                        <p:menuitem value="1. Presentación de la Idea" outcome="FormatoA" style="color:#FFFFFF;" />
-                        <p:menuitem value="Formato A" outcome="FormatoA" style="color:#FFFFFF;" />
-                    </p:breadCrumb>              
+                        <p:menuitem value="principal" url="Index.xhtml" />                                                            
+                        <p:menuitem value="Director" url="indexDirector.xhtml" />    
+                        <p:menuitem value="Trabajos de Grado" url="indexDirector.xhtml" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" url="fasesTrabajoGrado/index.xhtml" />                    
+                        <p:menuitem value="1. Presentación de la Idea" url="fasesTrabajoGrado/index.xhtml" />
+                        <p:menuitem value="Editar Formato A" />
+                    </p:breadCrumb>   
                 </h:form>
             </ui:define>
 
-            <ui:define name="title">
+            <ui:define name="title">                
             </ui:define>
 
             <ui:define name="body">
-
                 <h:form>
                     <p:menu styleClass="menuizqroles" style="background-color: white">
                         <p:submenu label="Perfiles" style="background-color: white">
@@ -41,7 +40,7 @@
                     </p:menu>
                 </h:form>
 
-                <p:panel styleClass="paneltrabajo" >
+                <h:panelGroup styleClass="paneltrabajo">
                     <f:metadata>
                         <f:viewParam name="trabajoid" value="#{trabajodegradoController.trabajoid}" />
                     </f:metadata>
@@ -117,14 +116,14 @@
 
                                     </h:panelGrid>
 
-                                    <p:commandButton value="Guardar" update="growl" process="@this" actionListener="#{formatoA.guardar()}" />
+                                    <p:commandButton value="Editar" update="growl" process="@this" actionListener="#{formatoA.editarFormatoA()}" />
                                 </p:panel>
                             </p:tab>
                         </p:wizard>
-                    </h:form>
-
-                </p:panel>                          
+                    </h:form>                    
+                </h:panelGroup>
             </ui:define>
+
         </ui:composition>
 
     </body>
