--- a/web/Paginas/General/fasesTrabajoGrado/index-jefe-departamento.xhtml
+++ b/web/Paginas/General/fasesTrabajoGrado/index-jefe-departamento.xhtml
@@ -37,8 +37,8 @@
                     <h:form>
                         <p:menu styleClass="menuizqroles" style="background-color: white">
                             <p:submenu label="Perfiles" style="background-color: white">
-                                <p:menuitem value="Director" url="../Director.xhtml?faces-redirect=true" style="background-color: #c2dfef" />
-                                <p:menuitem value="Jefe de Departamento" url="../vistaJefe.xhtml?faces-redirect=true" />
+                                <p:menuitem value="Director" url="../Director.xhtml?faces-redirect=true" />
+                                <p:menuitem value="Jefe de Departamento" url="../vistaJefe.xhtml?faces-redirect=true" style="background-color: #c2dfef" />
                             </p:submenu>                                
                         </p:menu>
                     </h:form>
@@ -65,13 +65,13 @@
                                 </p:effect>
                             </p:commandButton>
 
-                            <p:button value="Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="height: 96px; " />
+                            <p:button value="Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Evaluación del Anteproyecto" outcome="3-evaluacion-anteproyecto" disabled="#{trabajodegradoController.fases.terceraFase}" style="height: 96px; " />
+                            <p:button value="Evaluación del Anteproyecto" outcome="3-evaluacion-anteproyecto" disabled="#{trabajodegradoController.fases.terceraFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Ejecución del Proyecto de Grado" outcome="4-ejecucion-proyecto-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="height: 96px; " />
+                            <p:button value="Ejecución del Proyecto de Grado" outcome="4-ejecucion-proyecto-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="height: 96px; width: 96;" />
 
-                            <p:button value="Evaluación del Trabajo de Grado" outcome="5-evaluacion-trabajo-grado" disabled="#{trabajodegradoController.fases.quintaFase}" style="height: 96px; " />
+                            <p:button value="Evaluación del Trabajo de Grado" outcome="5-evaluacion-trabajo-grado" disabled="#{trabajodegradoController.fases.quintaFase}" style="height: 96px; width: 96;" />
 
                             <p:button value="Finalizado" outcome="6-finalizado" disabled="#{trabajodegradoController.fases.sextaFase}" style="height: 96px;" />
                         </h:panelGrid>        
@@ -82,14 +82,17 @@
                                     <f:param name="mode" value="'show'" />
                                 </p:effect>
                             </p:commandButton>-->
-                            <h:panelGrid columns="4" cellpadding="5" cellspacing="5">
-                                <h:outputText value="Formato A" style="font-weight: bold; " />
-                                <p:button value="Dilegenciar" icon="ui-icon-check" href="../FormatoA.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnDiligenciarFormatoA}" style="width: 110px;" />                                                  
-                                <p:button value="Editar" icon="ui-icon-check" href="../editar-Formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 110px;" />
-                                <p:button value="Ver" icon="ui-icon-check" href="../verFormatoA.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 110px;" />
+                            <h:panelGrid columns="4" cellpadding="5" cellspacing="5" >
                                 
-                                <h:outputText value="Revisión de la idea" style="font-weight: bold; " />
-                                <p:button value="Ver" icon="ui-icon-check" disabled="true" style="width: 110px;" />                                
+                                <h:outputText value="Formato A:" style="font-weight: bold; " />
+                                <p:button icon="ui-icon-check" value="Ver" href="../verFormatoAJefe.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" />
+                                <h:outputText />
+                                <h:outputText />
+                                
+                                <h:outputText value="Revisión de la idea:" style="font-weight: bold; " />
+                                <p:button icon="ui-icon-check" value="Diligenciar" disabled="false" />
+                                <p:button icon="ui-icon-check" value="Ver" disabled="true" />
+                                <p:button icon="ui-icon-check" value="Descargar" disabled="true" />                                
                             </h:panelGrid>
                         </p:panel>
                     </p:panel>
