--- a/web/Paginas/General/verFormatoA.xhtml
+++ b/web/Paginas/General/verFormatoA.xhtml
@@ -47,7 +47,7 @@
                 <h:panelGroup styleClass="paneltrabajo">                    
                     
                     <f:metadata>
-                        <f:viewParam name="trabajoid" value="#{formatoA.trabajoid}" />
+                        <f:viewParam name="trabajoid" value="#{formatoA.verProductodetrabajo}" />
                     </f:metadata>
 
 
