--- a/web/director/editar-formato-A.xhtml
+++ b/web/director/editar-formato-A.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./../../Plantillas/Plantilla.xhtml">
+        <ui:composition template="./../plantillas/plantilla.xhtml">
 
             <ui:define name="CuadroDeBotonesSesion">
                 CuadroDeBotonesSesion
@@ -17,31 +17,30 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Director" url="../Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />
-                        <p:menuitem value="Director" url="../Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />
-                        <p:menuitem value="Trabajos de Grado" url="../Director.xhtml?faces-redirect=true" style="color:#FFFFFF;" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="FormatoA" style="color:#FFFFFF;" />
-                        <p:menuitem value="1. Presentación de la Idea" outcome="FormatoA" style="color:#FFFFFF;" />
-                        <p:menuitem value="Formato A" outcome="FormatoA" style="color:#FFFFFF;" />
-                    </p:breadCrumb>              
+                        <p:menuitem value="Director" outcome="vista-director" />
+                        <p:menuitem value="Director" outcome="vista-director" />
+                        <p:menuitem value="Trabajos de Grado" outcome="vista-director" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
+                        <p:menuitem value="1. Presentación de la Idea" outcome="fases-trabajo-de-grado" />
+                        <p:menuitem value="Editar Formato A" />
+                    </p:breadCrumb>   
                 </h:form>
             </ui:define>
 
-            <ui:define name="title">
+            <ui:define name="title">                
             </ui:define>
 
             <ui:define name="body">
-
                 <h:form>
                     <p:menu styleClass="menuizqroles" style="background-color: white">
                         <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Director" action="Director.xhtml?faces-redirect=true" style="background-color: #c2dfef" />
-                            <p:menuitem value="Jefe de Departamento" action="vistaJefe.xhtml?faces-redirect=true" />
+                            <p:menuitem value="Director" outcome="vista-director" style="background-color: #c2dfef" />
+                            <p:menuitem value="Jefe de Departamento" outcome="./../jefe-de-departamento/vista-jefe-de-departamento.xhtml" />                            
                         </p:submenu>                                
                     </p:menu>
                 </h:form>
 
-                <p:panel styleClass="paneltrabajo" >
+                <h:panelGroup styleClass="paneltrabajo">
                     <f:metadata>
                         <f:viewParam name="trabajoid" value="#{trabajodegradoController.trabajoid}" />
                     </f:metadata>
@@ -117,14 +116,15 @@
 
                                     </h:panelGrid>
 
-                                    <p:commandButton value="Guardar" update="growl" process="@this" actionListener="#{formatoA.guardar()}" />
+                                    <p:button value="Cancelar" outcome="fases-trabajo-de-grado" />
+                                    <p:commandButton value="Editar" update="growl" process="@this" actionListener="#{formatoA.editarFormatoA()}" />
                                 </p:panel>
                             </p:tab>
                         </p:wizard>
-                    </h:form>
-
-                </p:panel>                          
+                    </h:form>                    
+                </h:panelGroup>
             </ui:define>
+
         </ui:composition>
 
     </body>
