--- a/web/director/ver-formato-A.xhtml
+++ b/web/director/ver-formato-A.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <body>
-
-        <ui:composition template="./../../Plantillas/Plantilla.xhtml">
+        
+        <ui:composition template="./../plantillas/plantilla.xhtml">
 
             <ui:define name="CuadroDeBotonesSesion">
                 CuadroDeBotonesSesion
@@ -17,11 +17,11 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="principal" url="Index.xhtml" />                                                            
-                        <p:menuitem value="Director" url="indexDirector.xhtml" />    
-                        <p:menuitem value="Trabajos de Grado" url="indexDirector.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" url="fasesTrabajoGrado/index.xhtml" />                    
-                        <p:menuitem value="1. Presentación de la Idea" url="fasesTrabajoGrado/index.xhtml" />
+                        <p:menuitem value="Director" outcome="vista-director" />
+                        <p:menuitem value="Director" outcome="vista-director" />
+                        <p:menuitem value="Trabajos de Grado" outcome="vista-director" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
+                        <p:menuitem value="1. Presentación de la Idea" outcome="fases-trabajo-de-grado" />
                         <p:menuitem value="Ver Formato A" />
                     </p:breadCrumb>   
                 </h:form>
@@ -38,8 +38,8 @@
                 <h:form>
                     <p:menu styleClass="menuizqroles" style="background-color: white">
                         <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Director" action="Director.xhtml?faces-redirect=true" style="background-color: #c2dfef" />
-                            <p:menuitem value="Jefe de Departamento" action="vistaJefe.xhtml?faces-redirect=true" />
+                            <p:menuitem value="Director" outcome="vista-director" style="background-color: #c2dfef" />
+                            <p:menuitem value="Jefe de Departamento" outcome="./../jefe-de-departamento/vista-jefe-de-departamento.xhtml" />                            
                         </p:submenu>                                
                     </p:menu>
                 </h:form>
@@ -53,7 +53,7 @@
 
                     <p:panel style="background-color: whitesmoke">
                         <h:panelGrid columns="2" cellpadding="5">
-                            <p:graphicImage value="../../resources/img/logo-unicauca.png"/>                            
+                            <p:graphicImage value="../resources/img/logo-unicauca.png"/>                                                        
                             <h:outputText value="Universidad del Cauca Facultad de Ingeniería Electrónica y Telecomunicaciones CI-FIET" style="font-weight:bold; "/>
 
                             <h:outputText value="TRABAJOS DE GRADO" style="font-weight:bold; font-size: 20px; "/>
@@ -114,7 +114,7 @@
                             <h:outputText />                            
                         </h:panelGrid>
                         <h:panelGrid columns="2" cellpadding="10">
-                            <p:button value="Volver" href="fasesTrabajoGrado/index.xhtml" />                                
+                            <p:button value="Volver" outcome="fases-trabajo-de-grado" />                                
                             <p:button value="Descargar" />
                         </h:panelGrid>
                     </p:panel>
