Se cambio el nombre de la unidad de persistencia a tguPU, y algunas modificaciones en las vistas

--- a/web/jefe-de-departamento/historial-ideas-revisadas.xhtml
+++ b/web/jefe-de-departamento/historial-ideas-revisadas.xhtml
@@ -61,7 +61,7 @@
                                 </p:link>                                                                 
                             </p:column>
                             <p:column headerText="Estudiantes">
-                                #{car.est1} ,  #{car.est2}  
+                                #{car.est1}  #{car.est2}  
                             </p:column>
                             <p:column headerText="Aprobada">
                                 <input type="checkbox" name="chk" id="chk1" value="1" checked="#{car.getaprobacion()}" disabled="true"/>  
