--- a/web/jefe-de-departamento/vista-jefe-de-departamento.xhtml
+++ b/web/jefe-de-departamento/vista-jefe-de-departamento.xhtml
@@ -60,7 +60,7 @@
                                 #{car.director}    
                             </p:column>
                             <p:column headerText="Estudiantes">
-                                #{car.est1} ,  #{car.est2}      
+                                #{car.est1}  #{car.est2}      
                             </p:column>
                         </p:dataTable>
                     </p:panel>
